fix overflow

--- a/src/components/Tabs/tabs.module.scss
+++ b/src/components/Tabs/tabs.module.scss
@@ -87,5 +87,6 @@
     flex: 1;
     padding: 20px;
     outline: none;
+    overflow-y: auto;
   }
 }
